# oars

./: Cargo.toml  LICENSE.txt  azure-pipelines.yml  lint.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: bench_bose_construction.rs  bench_bush_construction.rs
docs/: readme.md
oars/: .gitignore  Cargo.toml  lint.sh
oars/benches/: bench_bush_construction.rs
oars/src/: constructors.rs  oa.rs  perm_vec.rs  prelude.rs  soa.rs  utils.rs
oars/src/constructors/: bose.rs  bush.rs  liu_liu.rs  soa.rs
oars/tests/: bush_tests.rs
oars_proc_macro/: Cargo.toml
oars_proc_macro/src/: lib.rs
src/: constructors.rs  galois.rs  lib.rs  oa.rs  perm_vec.rs  prelude.rs  soa.rs  utils.rs
src/constructors/: bose.rs  bush.rs
tests/: bose_tests.rs  bush_tests.rs
