[package]
name = "oars"
version = "0.1.0"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
rand = "0.6.4"
primes = "0.2.3"
itertools = "0.8.0"

[dependencies.ndarray]
version = "0.12.1"
features = ["serde-1"]

[profile.release]
lto = true
opt-level = 3

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_bose_construction"
harness = false

[[bench]]
name = "bench_bush_construction"
harness = false
