[package]
name = "oars"
version = "0.2.0"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"
readme = "docs/readme.md"
keywords = ["math", "orthogonal", "arrays", "monte", "carlo"]
license = "MIT"

[dependencies]
rand = "0.6.5"
primes = "0.2.3"
itertools = "0.8.0"
num = "0.2.0"
ndarray = "0.12.1"
serde = { version = "1.0.90", optional = true }
serde_derive = { version = "1.0.90", optional = true }

[features]
default = []
serialize = ["serde", "serde_derive", "ndarray/serde-1"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_bose_construction"
harness = false

[[bench]]
name = "bench_bush_construction"
harness = false
