[package]
name = "oars"
description = "A library providing construction methods and utility functions for orthogonal arrays and strong orthogonal arrays"
repository = "https://github.com/afnanenayet/oars.git"
version = "1.1.2"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"
readme = "../docs/readme.md"
keywords = ["math", "orthogonal", "arrays", "monte", "carlo"]
maintenance = { status = "actively-maintained" }
license = "MIT"

[badges]
travis-ci = { repository = "afnanenayet/oars", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.7"
primes = "0.2"
itertools = "0.8"
num = "0.2"
ndarray = "0.12"
ndarray-parallel = { version = "0.9", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
rayon = { version = "1.1", optional = true }
oars_proc_macro = { version = "0.1.0", path = "../oars_proc_macro" }

[features]
default = []
serialize = ["serde", "serde_derive", "ndarray/serde-1"]
parallel = ["rayon", "ndarray-parallel"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_bose_construction"
harness = false
required-features = ["parallel"]

[[bench]]
name = "bench_bush_construction"
harness = false
required-features = ["parallel"]
