[package]
name = "oars"
description = "A library providing construction methods and utility functions for orthogonal arrays and strong orthogonal arrays"
repository = "https://github.com/afnanenayet/oars.git"
version = "3.0.2-alpha.0"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2021"
readme = "../docs/readme.md"
keywords = ["math", "orthogonal", "arrays", "monte", "carlo"]
license = "MIT"

[dependencies]
rand = "0.8"
primes = "0.3"
itertools = "0.10"
num = "0.3"
ndarray = "0.14.0"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
rayon = { version = "1.3", optional = true }
oars_proc_macro = { version = "0.1.1", path = "../oars_proc_macro" }
thiserror = "1.0"

[features]
default = []
serialize = ["serde", "serde_derive", "ndarray/serde-1"]
parallel = ["rayon", "ndarray/rayon"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_bose_construction"
harness = false
required-features = ["parallel"]

[[bench]]
name = "bench_bush_construction"
harness = false
required-features = ["parallel"]
