[package]
name = "oars_proc_macro"
description = "Procedural macros for the oars crate"
repository = "https://github.com/afnanenayet/oars.git"
version = "0.1.1"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
